[gd_scene load_steps=13 format=3 uid="uid://bdh0cqv4kt8t8"]

[ext_resource type="Script" path="res://scripts/basic_enemy.gd" id="1_x18ab"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_5wlrk"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_ah54x"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_oaeau"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_2ibju"]
[ext_resource type="AudioStream" uid="uid://3i4mrdifi4k7" path="res://audio/explosion.mp3" id="7_xtq1q"]
[ext_resource type="PackedScene" uid="uid://cgqgcdbbu4rwc" path="res://scenes/smoke.tscn" id="8_d2i56"]
[ext_resource type="PackedScene" uid="uid://ctnksfkdnfrvl" path="res://scenes/explosion_particle.tscn" id="8_q3ul8"]

[sub_resource type="Animation" id="Animation_ayxcf"]
resource_name = "spawn"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path3D/PathFollow3D/Enemy:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Path3D/PathFollow3D/Enemy:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hb22s"]
resource_name = "despawn"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path3D/PathFollow3D/Enemy:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Path3D/PathFollow3D/Enemy:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jbkq5"]
_data = {
"despawn": SubResource("Animation_hb22s"),
"spawn": SubResource("Animation_ayxcf")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qn8pp"]
height = 0.75

[node name="Enemy01" type="Node3D"]
script = ExtResource("1_x18ab")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jbkq5")
}

[node name="EnemyStateChart" type="Node" parent="."]
script = ExtResource("2_5wlrk")

[node name="CompoundState" type="Node" parent="EnemyStateChart"]
script = ExtResource("3_ah54x")
initial_state = NodePath("Spawning")

[node name="Spawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_oaeau")

[node name="ToTravellingState" type="Node" parent="EnemyStateChart/CompoundState/Spawning"]
script = ExtResource("5_2ibju")
to = NodePath("../../Travelling")
event = &"to_travelling_state"

[node name="Travelling" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_oaeau")

[node name="ToDamagingState" type="Node" parent="EnemyStateChart/CompoundState/Travelling"]
script = ExtResource("5_2ibju")
to = NodePath("../../Damaging")
event = &"to_damaging_state"

[node name="ToDyingState" type="Node" parent="EnemyStateChart/CompoundState/Travelling"]
script = ExtResource("5_2ibju")
to = NodePath("../../Dying")
event = &"to_dying_state"

[node name="Damaging" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_oaeau")

[node name="ToDespawningState" type="Node" parent="EnemyStateChart/CompoundState/Damaging"]
script = ExtResource("5_2ibju")
to = NodePath("../../Despawning")
event = &"to_despawning_state"

[node name="Dying" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_oaeau")

[node name="ToRemoveEnemyState" type="Node" parent="EnemyStateChart/CompoundState/Dying"]
script = ExtResource("5_2ibju")
to = NodePath("../../RemoveEnemy")
event = &"to_remove_enemy_state"

[node name="Despawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_oaeau")

[node name="ToRemoveEnemyState" type="Node" parent="EnemyStateChart/CompoundState/Despawning"]
script = ExtResource("5_2ibju")
to = NodePath("../../RemoveEnemy")
event = &"to_remove_enemy_state"

[node name="RemoveEnemy" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("4_oaeau")

[node name="Path3D" type="Path3D" parent="."]

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
transform = Transform3D(0.999972, 0, 0, 0, 0.999989, 0, 0, 0, 0.999978, 0, 0, 0)

[node name="Enemy" type="Node3D" parent="Path3D/PathFollow3D"]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.2, 0)

[node name="Area3D" type="Area3D" parent="Path3D/PathFollow3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path3D/PathFollow3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_qn8pp")

[node name="Explosion" parent="Path3D/PathFollow3D" instance=ExtResource("8_q3ul8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.530175, 0)

[node name="Smoke" parent="Path3D/PathFollow3D" instance=ExtResource("8_d2i56")]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 0.325, 0)

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_xtq1q")
bus = &"FX"

[connection signal="state_entered" from="EnemyStateChart/CompoundState/Spawning" to="." method="_on_spawning_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Travelling" to="." method="_on_travelling_state_entered"]
[connection signal="state_processing" from="EnemyStateChart/CompoundState/Travelling" to="." method="_on_travelling_state_processing"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Damaging" to="." method="_on_damaging_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Dying" to="." method="_on_dying_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Despawning" to="." method="_on_despawning_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/RemoveEnemy" to="." method="_on_remove_enemy_state_entered"]
[connection signal="area_entered" from="Path3D/PathFollow3D/Area3D" to="." method="_on_area_3d_area_entered"]
